* dbxout.c (dbxout_type_fields): Don't segfault on fields with 	incomplete types.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34453 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* dbxout.c (dbxout_type_fields): Don't segfault on fields with
+	incomplete types.
+
 2000-06-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* frame.c (end_fde_sort): Remove extraneous erratic array test.
