* cp-demangle.c (template_arg_list_new): Revert previous PARAMS patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34455 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun  8 18:52:24 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* cp-demangle.c (template_arg_list_new): Revert previous PARAMS patch.
+
 Thu Jun  8 09:25:54 2000  Philippe De Muyter  <phdm@macqel.be>
 
 	* cp-demangle.c (stdio.h): File included unconditionaly.
