Emit correct debug info for 64-bit signed enums on 64-bit host. 	* dwarf2out.c (size_of_die, case dw_val_class_const): Use 	size_of_sleb128. 	(value_format, case dw_val_class_const): Use sdata format. 	(output_die): Call output_sleb128.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34462 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-08  James E. Wilson  <wilson@bletchleypark.cygnus.com>
+
+	* dwarf2out.c (size_of_die, case dw_val_class_const): Use
+	size_of_sleb128.
+	(value_format, case dw_val_class_const): Use sdata format.
+	(output_die): Call output_sleb128.
+
 2000-06-08  Mark Mitchell  <mark@codesourcery.com>
 
 	* invoke.texi: Remove documentation for -fsquangle and
