2000-06-09  Gabriel Dos Reis  <gdr@codesourcery.com>
        * lex.c (DEF_OPERATOR): Say `operator@' -not- `operator @'
        whenever @ is a symbolic name.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34465 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-09  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* lex.c (DEF_OPERATOR): Say `operator@' -not- `operator @'
+	whenever @ is a symbolic name.
+
 2000-06-08  Mark Mitchell  <mark@codesourcery.com>
 
 	Remove old ABI mangling code.
