* system.h (SSIZE_MAX): Delete backup definition.
	* cppfiles.c (read_include_file): Use INTTYPE_MAXIMUM(ssize_t)
	instead of SSIZE_MAX.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34467 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* system.h (SSIZE_MAX): Delete backup definition.
+
+	* cppfiles.c (read_include_file): Use INTTYPE_MAXIMUM(ssize_t)
+	instead of SSIZE_MAX.
+
 2000-06-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.in: Check whether gas supports -relax.
