* timevar.def: Add TV_EXPAND.         * timevar.c (timevar_print): Update timing information.         * calls.c (try_to_integrate): Push to TV_INTEGRATION for inlining.
        * stmt.c (expand_return): Check for error_mark_node.

cp/:
        * semantics.c (expand_body): Push to TV_EXPAND.
        * optimize.c (optimize_function): Push to TV_INTEGRATION.
        * decl.c (start_function): Always call announce_function.

        * tinfo2.cc: Just declare abort.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34470 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-06-09  Jason Merrill  <jason@casey.soma.redhat.com>
+
+	* timevar.def: Add TV_EXPAND.
+	* timevar.c (timevar_print): Update timing information.
+	* calls.c (try_to_integrate): Push to TV_INTEGRATION for inlining.
+
+	* stmt.c (expand_return): Check for error_mark_node.
+
 2000-06-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* configure.in: Also avoid wrapping auto-build.h with IN_GCC.
