--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2000-06-09  Jason Merrill  <jason@casey.soma.redhat.com>
+
+	* semantics.c (expand_body): Push to TV_EXPAND.
+	* optimize.c (optimize_function): Push to TV_INTEGRATION.
+	* decl.c (start_function): Always call announce_function.
+
+	* tinfo2.cc: Just declare abort.
+
 2000-06-09  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* lex.c (DEF_OPERATOR): Say `operator@' -not- `operator @'
