* config/avr/avr.c (asm_output_section_name): bugfix.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34473 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jun  9 20:35:13 2000  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.c (asm_output_section_name): bugfix.
+
 2000-06-09  Jason Merrill  <jason@casey.soma.redhat.com>
 
 	* timevar.def: Add TV_EXPAND.
