--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-10  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in (libintl.a): Depend on intl.all.
+
 2000-06-09  H.J. Lu  (hjl@gnu.org)
 
 	* Makefile.in (c-parse.o): Also depend on output.h.
