* decl.c (add_binding): Handle duplicate declarations of external 	variables.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34489 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-10  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (add_binding): Handle duplicate declarations of external
+	variables.
+
 2000-06-09  Chip Salzenberg  <chip@valinux.com>
 	    Mark Mitchell <mark@codesourcery.com>
 
