--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,12 @@
+2000-06-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (EXPR_H): New dependency variable.
+	(actions.o, expr.o): Use EXPR_H.
+	(lang.o): Depend on RTL_H and EXPR_H.
+
+	* lang.c: Include rtl.h and expr.h.
+	(lang_get_alias_set): Mark parameter with ATTRIBUTE_UNUSED.
+
 2000-06-04  Philipp Thomas  <pthomas@suse.de>
 
 	* Makefile.in(INTLLIBS): New macro.
