--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-common.c (lang_get_alias_set): Fix typo.
+
 2000-06-12  Richard Earnshaw <rearnsha@arm.com>
 
 	* flow.c (mark_used_regs): Revert last change.
