* optimize.c (expand_call_inline): Don't recurse into the code 	used to initialize the parameters more than once.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34501 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* optimize.c (expand_call_inline): Don't recurse into the code
+	used to initialize the parameters more than once.
+
 2000-06-11  Mark Mitchell <mark@codesourcery.com>
 	
 	* mangle.c (NESTED_TEMPLATE_MATCH): Fix typo in comment.
