2000-06-12  H.J. Lu  <hjl@gnu.org>
	* gengenrtl.c (obstack_alloc_rtx): Correct the allocated size.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34504 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-12  H.J. Lu  <hjl@gnu.org>
+
+	* gengenrtl.c (obstack_alloc_rtx): Correct the allocated size.
+
 2000-06-12  David Edelsohn  <edelsohn@gnu.org>
 
 	* aix41.h (SUBTARGET_SWITCHES): Delete threads.
