--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-12  Jason Merrill  <jason@redhat.com>
+
+	* g++.old-deja/old-deja.exp: Add -Wno-long-long.
+
 Fri Jun  9 22:46:34 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* gcc.c-torture/compile/20000609-1.c: New test.
