* cpplib.c (handle_directive): Print non-NUL-terminated string 	with %.*s.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34514 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-13  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplib.c (handle_directive): Print non-NUL-terminated string
+	with %.*s.
+
 2000-06-12  Michael Meissner  <meissner@redhat.com>
 
 	* ifcvt.c (dead_or_predicable): Don't do conditional execution
