--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-07  David O'Brien  <obrien@FreeBSD.org>
+
+	* configure.in:  Adjust FreeBSD bits to match changes to config.guess.
+	We now default to ELF for the i386, and a.out is the special case.
+	* configure:  Rebuilt.
+
 Tue Jun 13 10:05:30 2000  Hans-Peter Nilsson  <hp@axis.com>
 
 	* final.c (final_scan_insn): Delete notes between cc0 setter and
