gcc: 2000-06-13  Philipp Thomas  <pthomas@suse.de>
	* configure.in(ALL_LINGUAS): Changed en_UK to en_GB.
	* configure: Rebuilt.

gcc/po:

2000-06-13  Philipp Thomas  <pthomas@suse.de>

	* en_UK.po: Renamed to en_GB.po.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34519 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-13  Philipp Thomas  <pthomas@suse.de>
+
+	* en_UK.po: Renamed to en_GB.po.
+
 2000-06-07  Philipp Thomas  <pthomas@suse.de>
 
 	* POTFILES.in: Remove dyn-string.[ch].
