--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-13  Philipp Thomas  <pthomas@suse.de>
+
+	* configure.in(ALL_LINGUAS): Changed en_UK to en_GB.
+	* configure: Rebuilt.
+
 2000-06-07  David O'Brien  <obrien@FreeBSD.org>
 
 	* configure.in:  Adjust FreeBSD bits to match changes to config.guess.
