* Makefile.in (gensupport.o): Remove bogus $(HOST_PREFIX) reference.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34520 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 13 14:05:35 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* Makefile.in (gensupport.o): Remove bogus $(HOST_PREFIX) reference.
+
 2000-06-13  Philipp Thomas  <pthomas@suse.de>
 
 	* configure.in(ALL_LINGUAS): Changed en_UK to en_GB.
