--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-13  James E. Wilson  <wilson@cygnus.com>
+
+	* config/ia64/ia64.md (movxf_internal): Add missing "e" to ldf/stf.
+
 Tue Jun 13 14:05:35 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* Makefile.in (gensupport.o): Remove bogus $(HOST_PREFIX) reference.
