* config/m68k/openbsd.h (ASM_SPEC): pass down options to assembler         correctly.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 13 14:45:10 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* config/m68k/openbsd.h (ASM_SPEC): pass down options to assembler
+	correctly.
+
 2000-06-13  James E. Wilson  <wilson@cygnus.com>
 
 	* config/ia64/ia64.md (movxf_internal): Add missing "e" to ldf/stf.
