--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-13  Richard Henderson  <rth@cygnus.com>
+
+	* explow.c (set_mem_attributes): Do nothing for NULL type.
+
 Tue Jun 13 14:45:10 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* config/m68k/openbsd.h (ASM_SPEC): pass down options to assembler
