--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jun 13 15:48:03 2000  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
+
+	* Make-lang.in (c++.install-common): Install g++-cross in
+	$(gcc_tooldir)/bin as g++ and c++; g++ in $(bindir) as
+	$(target_alias)-g++ and $(target_alias)-c++.
+
 2000-06-12  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (vcall_offset_data_s): Add last_init and fns.
